clean up styling on services carousel

--- a/app/_scss/sections/_services.scss
+++ b/app/_scss/sections/_services.scss
@@ -84,6 +84,8 @@
 }
 
 #section-services-carousel {
+  border-top: white solid 3px;
+  border-bottom: white solid 3px;
   .owl-item {
     @include hover-plus;
   }
