--- a/app/_scss/sections/_about.scss
+++ b/app/_scss/sections/_about.scss
@@ -8,7 +8,6 @@
   h2 {
     color: $c-blue-2;
     font-family: $ff-raleway;
-    @include h3();
     font-weight: 600;
   }
   h3 {
@@ -26,11 +25,15 @@
   img {
     border-radius: 10000px;
     border: 4px solid $c-white;
-    @include vertical-center();
   }
 
   .row {
-    display: flex;
+    @media screen and (min-width: $width-md+1) {
+      display: flex;
+      img {
+        @include vertical-center();
+      }
+    }
   }
 
 }
