--- a/app/_scss/sections/_phone-slab.scss
+++ b/app/_scss/sections/_phone-slab.scss
@@ -31,9 +31,13 @@
   }
 
   .row {
+    @media screen and (min-width: $width-md+1) {
     display: flex;
+    }
     .btn {
-      @include vertical-center();
+      @media screen and (min-width: $width-md+1) {
+        @include vertical-center();
+      }
       padding-top: 10px;
       padding-bottom: 10px;
     }
@@ -69,6 +73,7 @@
     text-align: left;
     @media screen and (max-width: $width-md) {
       text-align: center;
+      margin-bottom: $spacing-sm;
     }
     @media screen and (max-width: $width-sm) {
     }
