--- a/app/_scss/sections/_reviews.scss
+++ b/app/_scss/sections/_reviews.scss
@@ -23,7 +23,7 @@ a[href="http://www.tysonsteele.com/"] {
 
   h2 {
     color: $c-blue;
-    @include h3;
+    @include h3();
   }
   @media screen and (max-width: $width-xs) {
     padding-bottom: 80px;
