--- a/app/_scss/globals/_colors.scss
+++ b/app/_scss/globals/_colors.scss
@@ -16,8 +16,10 @@ $c-blue-2: #0793DB;
 $c-blue-3: #079CE7;
 $c-blue-4: #3CAAC5;
 $c-blue-5: #80D4FF;
+$c-blue-6: #52659A;
 $c-teal: #58B9C7;
 $c-grey: #6F6D69;
+$c-grey-location: #73716E;
 $c-grey-brown: #605953;
 $c-dark-brown: #523523;
 $c-black: #000000;
