first padd on the certifacte section

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -37,6 +37,7 @@
 
 
 @import "sections/about";
+@import "sections/certificates";
 @import "sections/footer";
 @import "sections/header";
 @import "sections/insurance";
