--- a/app/_scss/sections/_location.scss
+++ b/app/_scss/sections/_location.scss
@@ -85,6 +85,7 @@
     color: $c-dark-brown;
     font-family: $ff-lato;
     font-weight: 900;
+    margin-bottom: 0;
   }
   th {
     width: 1px;
@@ -101,8 +102,8 @@
     max-width: 250px;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 20px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
