first pass on footer

--- a/app/_scss/globals/_colors.scss
+++ b/app/_scss/globals/_colors.scss
@@ -17,6 +17,7 @@ $c-blue-3: #079CE7;
 $c-blue-4: #3CAAC5;
 $c-blue-5: #80D4FF;
 $c-blue-6: #52659A;
+$c-blue-8: #088FD5;
 $c-teal: #58B9C7;
 $c-grey: #6F6D69;
 $c-grey-location: #73716E;
