--- a/app/_scss/sections/_footer.scss
+++ b/app/_scss/sections/_footer.scss
@@ -1,9 +1,11 @@
 //Overrides for Canvas
 #footer {
   position: relative;
-  background-color: $c-teal;
+  background-color: $c-blue-8;
   border-top: none;
   p {
+    font-weight: 100;
+    font-size: 14px;
     float: left;
     color: white;
     @media screen and (max-width: $width-md) {
@@ -48,23 +50,26 @@ a.si-google {
   @media (max-width: $width-md) {
     float: none;
   }
-}
-
-.icon-google {
-  color: white;
-  font-size: 25px;
-  background-color: #b62b1c;
-  border: 1px solid white;
-  width: 37px;
-  text-align: center;
-  border-radius: 8px;
-  float: right;
-  @media (max-width: $width-sm) {
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
+  &:hover {
+    text-decoration: none;
   }
 }
+//
+//.icon-google {
+//  color: white;
+//  font-size: 25px;
+//  background-color: #b62b1c;
+//  border: 1px solid white;
+//  width: 37px;
+//  text-align: center;
+//  border-radius: 8px;
+//  float: right;
+//  @media (max-width: $width-sm) {
+//    float: none;
+//    margin-left: auto;
+//    margin-right: auto;
+//  }
+//}
 
 a.si-yelp {
   display: inline-block;
