--- a/app/_scss/globals/_colors.scss
+++ b/app/_scss/globals/_colors.scss
@@ -18,6 +18,7 @@ $c-blue-4: #3CAAC5;
 $c-blue-5: #80D4FF;
 $c-blue-6: #52659A;
 $c-blue-8: #088FD5;
+$c-blue-9: #30A9E8;
 $c-teal: #58B9C7;
 $c-grey: #6F6D69;
 $c-grey-location: #73716E;
