add synced tour carousel, getting dependency related error

--- a/app/_scss/sections/_tour.scss
+++ b/app/_scss/sections/_tour.scss
@@ -12,7 +12,10 @@
     margin-bottom: 0;
   }
 
-  div[class^=owl-item] {
+  div[class^=owl-item]>a {
     @include hover-plus;
+  }
+  .tour-carousel-2 {
+    display: hidden;
   }
 }
