--- a/app/_scss/sections/_tour.scss
+++ b/app/_scss/sections/_tour.scss
@@ -1,7 +1,10 @@
 #section-tour {
   padding-top: $spacing-xs;
   background-color: $c-white;
-  border-bottom: 2px solid $c-blue-4;
+
+  .tour-carousel {
+    background-color: $c-blue-4;
+  }
 
   .heading {
     text-align: center;
