--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -49,5 +49,8 @@
 @import "sections/services";
 @import "sections/tour";
 
-div {
+#bf-revz-widget-1913325476 {
+  @media screen and (max-width: 400px) {
+    max-height: 600px;
+  }
 }
