--- a/app/_scss/sections/_about.scss
+++ b/app/_scss/sections/_about.scss
@@ -15,7 +15,7 @@
     color: $c-white;
     margin-bottom: $spacing-xs;
   }
-  h5 {
+  h4 {
     color: $c-white;
   }
   p {
@@ -25,10 +25,7 @@
   img {
     border-radius: 10000px;
     border: 4px solid $c-white;
-    @media screen and (max-width: $width-md) {
-      margin-right: auto;
-      margin-left: auto;
-    }
+
   }
 
   .row {
@@ -41,6 +38,7 @@
     @media screen and (max-width: $width-md) {
       .col-md-6:first-child {
         text-align: center;
+        padding-bottom: $spacing-sm;
       }
     }
   }
