--- a/app/_scss/sections/_insurance.scss
+++ b/app/_scss/sections/_insurance.scss
@@ -13,11 +13,11 @@
   padding-top: 50px;
   background-image: url("/assets/bg-tile-light.jpg");
   @include parallax-background();
-  
+
   & p {
     line-height: 1.2;
   }
-  h2 {
+  h2 {s
     color: $c-blue;
     font-family: $ff-lato;
     font-weight: 900;
