--- a/app/_scss/componenets/_modal.scss
+++ b/app/_scss/componenets/_modal.scss
@@ -27,6 +27,7 @@
 .services-modals {
   & .modal-title {
       padding-top: 10px;
+    font-weight: 700;
   }
   & p {
     padding-bottom: 15px;
@@ -41,7 +42,6 @@ button.close {
   font-family: sans-serif;
   font-size: 50px;
   position: relative;
-  top: 10px;
   color: $c-black-blue;
   opacity: 0.8;
 }
